--- a/css/style.css
+++ b/css/style.css
@@ -152,7 +152,8 @@ img{
 .hero {background-color: var(--color-backgroudn);
        padding-top: 200px;
        padding-bottom: 210px;
-       background-image: url("/goit-markup-hw-04/images/backgroundfoto.jpg");
+       background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), 
+       url("/goit-markup-hw-04/images/backgroundfoto.jpg");
        background-size: 1600px 600px;
        background-position: center;
        background-repeat: no-repeat;
