--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
       --black: #000000;
       --btn-backround: #f5f4fa;
       --border-color: #ececec;
+      --link-color: #afb1b8;
       }
 
 body {
@@ -273,6 +274,34 @@ img{
     margin-bottom: 94px;
 }
 
+.contact-list-socialmedia {
+   display: flex; 
+   list-style: none;
+   align-items: center;
+   justify-content: space-between;
+   background-color: var(--white);
+}
+
+.social-icon {
+    width: 20px;
+    height: 20px;
+    fill: var(--link-color);
+}
+.socialmedia-link {
+    display: flex;
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+    align-items: center;
+    justify-content: center;
+}
+
+.contact-list-socialmedia:hover,
+.contact-list-socialmedia:focus {
+    fill: var(--main-color); 
+}
+
+
 .contact-list-item {background-color: var(--white);}
 
 .contact .container {margin-top: 100px;}
@@ -295,6 +324,7 @@ img{
     letter-spacing: 3%;
     text-align: center;
     color: var(--main-grey);
+    margin-bottom: 16px;
 }
 
 /*end kontakt*/
