--- a/css/style.css
+++ b/css/style.css
@@ -299,40 +299,75 @@ img{
     margin-bottom: 94px;
 }
 
-.contact-list-socialmedia {
+/*.contact-list-socialmedia {
    display: flex; 
    list-style: none;
    align-items: center;
-   background-color: var(--white);
+   /*background-color: var(--white);
    margin-bottom: 30px;
    margin-top: 16px;
    justify-content: space-between;
-   margin-right: 30px;
-   margin-left: 30px;
+   padding-top: 16px;
+   /*margin-right: 30px;
+   margin-left: 30px;}*/
 
-}
 /*.contact-list-socialmedia:not(:last-child){
     margin-right: 20px;
 }*/
 
-.social-icon {
+/*.social-icon {
     fill: var(--link-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .socialmedia-link {
     display: flex;
     width: 44px;
-    height: 44px; 
+    height: 44px;
     border-radius: 50%;
     align-items: center;
     justify-content: center;
+    background-color: var(--white);  
 }
 
 .social-icon:hover,
 .social-icon:focus {
     fill: var(--white);
     border-radius: 50%;
-    background-color: var(--main-color);
-}
+    background-color: var(--main-color);} */
+    .contact-list-item{
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+    1px 4px 4px rgba(0,0,0,0.06),
+    1px 4px 6px rgba(0,0,0, 0.16);
+
+    }
+
+    .contact-list-socialmedia{
+        list-style: none;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    
+    .socialmedia-link{
+       display: flex;
+       padding: 12px;
+       border-radius: 50%;
+       fill: var(--link-color);
+       background-color: rgba(255,255,255,0.1);
+       margin-bottom: 30px;
+    }
+      
+    
+    .socialmedia-link:hover,
+    .socialmedia-link:focus {
+        fill: var(--white);
+        background-color: var(--main-color);
+    }
+
+
 
 
 .contact-list-item {background-color: var(--white);}
@@ -393,6 +428,19 @@ img{
 
 /*END NASI KLENCI*/
 /* END MAIN */
+
+.foot-one{
+    display: flex;
+    align-items: center;
+    justify-items: center;
+    list-style: none;
+}
+.foot-three{
+    margin-left: 70px;
+    margin-bottom: 60px;
+}
+
+
 .endpage{background-color: var(--color-backgroudn);
 padding-top: 60px;
 padding-bottom: 60px;}
@@ -444,9 +492,9 @@ padding-bottom: 60px;}
     padding-top: 72px;
     display: inline-block;
 }*/
-.right-footer{
-    display: inline-block;
-}
+/*.right-footer{
+    padding-top: 72px;
+}*/
 
 .right-icons-link{
    display: flex;
