--- a/css/style.css
+++ b/css/style.css
@@ -564,6 +564,9 @@ justify-content: center;
     color: var(--white);
     cursor: pointer;
     border-style: none;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+    1px 4px 4px rgba(0,0,0,0.06),
+    1px 4px 6px rgba(0,0,0, 0.16);
 }
 .main-list{
     list-style: none;
